--- a/project_with_evaluation.ipynb
+++ b/project_with_evaluation.ipynb
@@ -31,7 +31,7 @@
     "    scores = [books_scores[x] for x in books]\n",
     "    total_score = sum(scores)\n",
     "    variance = statistics.variance(scores)\n",
-    "    return total_score / max(0.01, variance)"
+    "    return total_score / (max(0.01, variance) * library[0][1])"
    ]
   },
   {
