Added better heuristic.

--- a/project.ipynb
+++ b/project.ipynb
@@ -41,7 +41,7 @@
     "    scores = [books_scores[x] for x in books]\n",
     "    total_score = sum(scores)\n",
     "    variance = statistics.variance(scores)\n",
-    "    return (total_score ** 2 * library[0][2]) / (max(0.01, variance) * library[0][1])"
+    "    return total_score / (max(0.01, variance) * library[0][1])"
    ]
   },
   {
@@ -390,9 +390,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 0; timestamp: 13.31; epoch's duration:  0.55; best solution: 4633290\n",
-      "epoch: 1; timestamp: 13.84; epoch's duration:  0.53; best solution: 4633290\n",
-      "epoch: 2; timestamp: 14.43; epoch's duration:  0.59; best solution: 4633290\n"
+      "epoch: 0; timestamp: 13.16; epoch's duration:  0.55; best solution: 5414171\n",
+      "epoch: 1; timestamp: 13.71; epoch's duration:  0.55; best solution: 5414171\n",
+      "epoch: 2; timestamp: 14.32; epoch's duration:  0.61; best solution: 5414171\n",
+      "epoch: 3; timestamp: 15.03; epoch's duration:  0.71; best solution: 5414171\n",
+      "epoch: 4; timestamp: 15.98; epoch's duration:  0.95; best solution: 5414171\n",
+      "epoch: 5; timestamp: 17.48; epoch's duration:  1.5; best solution: 5414171\n",
+      "epoch: 6; timestamp: 20.4; epoch's duration:  2.92; best solution: 5414171\n",
+      "epoch: 7; timestamp: 23.66; epoch's duration:  3.26; best solution: 5414171\n",
+      "epoch: 8; timestamp: 26.83; epoch's duration:  3.17; best solution: 5414171\n",
+      "epoch: 9; timestamp: 29.65; epoch's duration:  2.82; best solution: 5414171\n",
+      "epoch: 10; timestamp: 32.51; epoch's duration:  2.86; best solution: 5414171\n",
+      "epoch: 11; timestamp: 35.34; epoch's duration:  2.83; best solution: 5414171\n",
+      "epoch: 12; timestamp: 38.2; epoch's duration:  2.87; best solution: 5414171\n",
+      "epoch: 13; timestamp: 41.07; epoch's duration:  2.87; best solution: 5414171\n",
+      "epoch: 14; timestamp: 43.93; epoch's duration:  2.85; best solution: 5414171\n",
+      "epoch: 15; timestamp: 46.74; epoch's duration:  2.81; best solution: 5414171\n",
+      "epoch: 16; timestamp: 49.65; epoch's duration:  2.91; best solution: 5414171\n",
+      "epoch: 17; timestamp: 52.59; epoch's duration:  2.94; best solution: 5414171\n",
+      "epoch: 18; timestamp: 55.68; epoch's duration:  3.09; best solution: 5414171\n",
+      "epoch: 19; timestamp: 58.62; epoch's duration:  2.94; best solution: 5414171\n",
+      "epoch: 20; timestamp: 61.6; epoch's duration:  2.98; best solution: 5414171\n",
+      "epoch: 21; timestamp: 65.14; epoch's duration:  3.55; best solution: 5414171\n",
+      "epoch: 22; timestamp: 68.1; epoch's duration:  2.95; best solution: 5414171\n",
+      "epoch: 23; timestamp: 71.73; epoch's duration:  3.64; best solution: 5414171\n",
+      "epoch: 24; timestamp: 74.66; epoch's duration:  2.93; best solution: 5414171\n",
+      "epoch: 25; timestamp: 77.68; epoch's duration:  3.02; best solution: 5414171\n",
+      "epoch: 26; timestamp: 81.09; epoch's duration:  3.41; best solution: 5414171\n",
+      "epoch: 27; timestamp: 84.8; epoch's duration:  3.71; best solution: 5414171\n",
+      "epoch: 28; timestamp: 88.73; epoch's duration:  3.92; best solution: 5414171\n",
+      "epoch: 29; timestamp: 92.55; epoch's duration:  3.82; best solution: 5414171\n",
+      "epoch: 30; timestamp: 95.87; epoch's duration:  3.32; best solution: 5414171\n",
+      "epoch: 31; timestamp: 98.72; epoch's duration:  2.85; best solution: 5414171\n",
+      "epoch: 32; timestamp: 101.67; epoch's duration:  2.95; best solution: 5414171\n",
+      "epoch: 33; timestamp: 104.6; epoch's duration:  2.94; best solution: 5414171\n",
+      "epoch: 34; timestamp: 108.21; epoch's duration:  3.6; best solution: 5414171\n",
+      "epoch: 35; timestamp: 111.15; epoch's duration:  2.94; best solution: 5414171\n",
+      "epoch: 36; timestamp: 115.33; epoch's duration:  4.18; best solution: 5414171\n",
+      "epoch: 37; timestamp: 119.07; epoch's duration:  3.74; best solution: 5414171\n"
      ]
     }
    ],
