Added first descriptions

--- a/project.ipynb
+++ b/project.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "source": [
     "## Time measurments\n",
-    "*we got limited time, so we will store duartion of each epoch, to end program before 300s.*\n"
+    "One of requirements of the project is to return resulut within 300 seconds from the beginning. To meet this criterion we store duration of each epoch (actually time stamp of epoch completion time) in a list."
    ]
   },
   {
@@ -64,7 +64,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Heuristic which will be used to create initial population. It's possible to find better heuristic for each of example instances, but this one gives best result in average case*"
+    "To compute heuristic value for library we use following formula:\n",
+    "$$heuristicValue=\\frac{\\sum_{i=0}^{size}bookScore_{i}}{max(0.01, var(books))*signUpTime}$$\n",
+    "We want to maximize sum of scores of books in the given library. That is why we put this value in numerator. Another factor which we decided to take into account time necessary to sign up the library - we want to minimize this factor, so we put it in the denominator. Last factor, which changed results of our program was variance of books' scores in library. In some test cases, for some libraries variance was equal to zero, so we added substitution with 0.01 if variance equals 0."
    ]
   },
   {
@@ -94,7 +96,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*useful in sorting solutions etc.*"
+    "*useful in sorting solutions etc.*\n",
+    "In many places it is usefull or even necessary to know how good is the solution. Thus we decided to implement function, which will return fitness value for the solution - finess value is a precise value which is described in Google Hashcode problem description."
    ]
   },
   {
@@ -487,7 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Complete the population using greedy algorithms*"
+    "One of requirements of the project is to return solution which is not worse than greedy solution. To meet this requirement program add greedy solution to the initial population. We are aware, that adding greedy solution may make program prone to stuck in local optima, but we want to be sure, that in worst case out solution will be at least as good as greedy solution."
    ]
   },
   {
