Description correction + final sum-up added

--- a/project.ipynb
+++ b/project.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## Authors\n",
-    "Magdalena Kobusińska and Jacek Karolczak"
+    "Magdalena Kobusińska (145463) and Jacek Karolczak (145446)"
    ]
   },
   {
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "## Abstract\n",
-    "The following document is a code review for soultion of NP-Hard problem, described by Google in Google Hashcode 2020 problem statement. This problem has been stated as semester project for Combinatorial Optimization course by M.Sc. Jarosław Synak. Given problem is NP-Hard, so we decided to implement Genetic Algorithm. We decided to update  GA principals to meet our needs. The key difficulty occured finding good heuristic function."
+    "The following document is a code review for the solution of NP-Hard problem, described by Google in Google Hashcode 2020 problem statement. This problem has been assigned as a semester project for Combinatorial Optimization course by M.Sc. Jarosław Synak. Given the problem is NP-Hard, we decided to implement the Genetic Algorithm. We also decided to update GA principals to meet our needs. The key difficulty occurred finding good heuristic function."
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,13 +58,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Time measurments\n",
-    "One of requirements of the project is to return result within 300 seconds from the beginning. To meet this criterion we decided to store duration of each epoch (actually time stamp of epoch completion time) in a list."
+    "## Time measurements\n",
+    "One of the key requirements of the project is to return a result within 300 seconds from the start of code running. To meet this criterion we decided to store the duration of each epoch (actually time stamp of epoch completion time) in a list."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,12 +85,12 @@
    "source": [
     "To compute heuristic value for library we use following formula:\n",
     "$$heuristicValue=\\frac{\\sum_{i=0}^{size}bookScore_{i}}{max(0.01, var(bookScores))*signUpTime}$$\n",
-    "We want to maximize sum of scores of books in the given library. That is why we put this value in numerator. Another factor which we decided to take into account time necessary to sign up the library - we want to minimize this factor, so we put it in the denominator. Last factor, which changed results of our program was variance of books' scores in library. In some test cases, for some libraries variance was equal to zero, so we added substitution with 0.01 if variance equals 0."
+    "We want to maximize the sum of scores of books in the given library. That is why we put this value in the numerator. Another factor which we decided to take into account time necessary to sign up the library - we want to minimize this factor, so we put it in the denominator. The last factor, which changed the results of our program was the variance of books' scores in the library. In some test cases, for some libraries variance was equal to zero, so we added substitution with 0.01 if variance equals 0."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,12 +115,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In many places it is usefull or even necessary to know how good is the particular solution. Thus we decided to implement function, which will return fitness value for the solution - finess value is a precise value which is described in Google Hashcode problem description."
+    "In many places, it is useful or even necessary to know how good is the particular solution. Thus we decided to implement a function, which will return fitness value for the solution - fitness value is a precise value which is described in Google Hashcode problem description."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,12 +152,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In many places, like mutation and crrosover operators, our program operates on set containing libraries choosen to sign up in particular solution, which are ordered according to order in sign-up queue. Following function transform such a list into complete and valid solution. For each day, for each library, as long as there is time to send book, is choosen a book (or books) with highest score, which is available in library and hasn't been sent by another library."
+    "In many places, like mutation and crossover operators, our program operates on a set containing libraries chosen to sign up in particular solution, which is ordered according to order in the sign-up queue. Following function transform such a list into complete and valid solution. For each day, for each library, as long as there is time to send the book, is chosen a book (or books) with the highest score, which is available in the library and hasn't been sent by another library."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,12 +190,12 @@
     "# Genetic Operators\n",
     "## Selection\n",
     "### Initial population\n",
-    "Each solution is created by adding arbitrary, not used library to the solution as long as time necessary to sign up all library in solution doesn't exceep available time. Choosing artitrary library is determined by it's heuristic values - the higher the value the more preferable library."
+    "Each solution is created by adding arbitrary, not used the library to the solution as long as the time necessary to sign up all library in solution doesn't exceed available time. Choosing arbitrary library is determined by its heuristic values - the higher the value the more preferable library."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,12 +221,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We decided to create initial population as long as it's size is equal to setted size or the half of available time runs out. Last element of the initial populaiton is a greedy solution (see below)."
+    "The evolutionary process begins with initialization, wherein an initial population of candidate solutions is generated. We decided to create the initial population as long as it's size is equal to set size or the half of available time runs out. The last element of the initial population is a greedy solution (see below)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,12 +244,12 @@
    "metadata": {},
    "source": [
     "### Get greedy-like solution\n",
-    "One of project requirement is to return result which is not worse than greedy solution. To meet this constraint we decided, that program will add greedy-like solution to the initial population, to be sure, that our final solution won't be worse than greedy solution."
+    "One of project requirement is to return the result which is not worse than the greedy solution. To meet this constraint we decided, that program will add the greedy-like solution to the initial population, to be sure, that our final solution won't be worse than the greedy solution."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,12 +277,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The algorithm swap nucleotides in three pairs. Thus, it's prone to ommit optima, but after our experiments we figured out, that on our instances that gives better results if our time is so limited."
+    "The algorithm swap nucleotides in three pairs. Thus, it's prone to omit optima, but after our first experiments we figured out, that on our instances that gives better results if our time is not limited."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,12 +326,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Program use single-point crossover. It means, that first child consists of first half of first parent and second from the second one and second child consits of first half of second parent and second from the first one. Algorithm takes care also for validness of the solution. "
+    "Crossover is a genetic operator used to vary the programming of a chromosome or chromosomes from one generation to the next. Two strings are picked from the mating pool at random to crossover to produce superior offspring. Our program uses a single-point crossover. It means that the first child consists of the first part of first parent and second from the second one and the second child consists of the first part of the second parent and second from the first one. The algorithm takes care also for validness of the solution. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,12 +358,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our algorithm creates new individuals in such a way, that offspring size equals population size. Mating pool consists of values of population."
+    "Our algorithm creates new individuals in such a way, that offspring size equals population size. The mating pool consists of values of the population."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,12 +397,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We did many experiments to find operators which will do best in finding best solution. This same had been done for size of population."
+    "The population size and operators should not be kept very large as it can cause a GA to slow down, while a smaller population might not be enough for a good mating pool. Therefore, an optimal population size needs to be decided by trial and error. We did many experiments to find operators which will do best in finding the best solution. This same had been done for the size of the population."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,15 +428,15 @@
     "libraries = [None] * libraries_number\n",
     "for i in range(libraries_number):\n",
     "    libraries[i] = (tuple([int(x) for x in input().split()]), tuple([int(x) for x in input().split()]))\n",
-    "libraries = tuple(libraries) "
+    "libraries = tuple(libraries)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Getting initial population\n",
-    "The following snippet is responsible for creating tuple, which stores heuristic values for libraries. Such values are necessary to create an initial population. Mechanism is widely described above function which is in charge of creating initial population."
+    "## Getting the initial population\n",
+    "The following snippet is responsible for creating a tuple, which stores heuristic values for libraries. Such values are necessary to create an initial population. The mechanism is widely described above function which is in charge of creating the initial population."
    ]
   },
   {
@@ -452,7 +452,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here program is obtaining initial population. Process of generating population is limited to half of the time given to execute program, to prevent exceeding time with no solution or with quite poor solutin. Thus, final population size may vary from given in parameters declaration."
+    "Here program is obtaining initial population. Process of generating population is limited to half of the time given to execute the program, to prevent exceeding time with no solution or with quite a poor solution. Thus, the final population size may vary from given in parameters declaration."
    ]
   },
   {
@@ -468,7 +468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One of requirements of the project is to return solution which is not worse than greedy solution. To meet this requirement program add greedy solution to the initial population. We are aware, that adding greedy solution may make program prone to stuck in local optima, but we want to be sure, that in worst case out solution will be at least as good as greedy solution."
+    "One of the requirements of the project is to return solution which is not worse than the greedy solution. To meet this requirement program add the greedy solution to the initial population. We are aware that adding greedy solution may make program prone to stuck in local optima, but we want to be sure, that in a worst-case out solution will be at least as good as a greedy solution."
    ]
   },
   {
@@ -486,7 +486,7 @@
    "metadata": {},
    "source": [
     "## Main loop - epochs\n",
-    "Epochs are executed as long as time remaining for program execution is greater or equal to doubled last epoch's duration + 5 seconds. This quarantee, that program will not only finish searching for best solution, but also print the best solution in given time. The program repeat following procedure:\n",
+    "Epochs are executed as long as time remaining for program execution is greater or equal to doubled last epoch's duration + 5 seconds. This guarantee, that program will not only finish searching for the best solution but also print the best solution in a given time. The program repeat the following procedure:\n",
     "```\n",
     "In each epoch:\n",
     "    extend population with mutated individuals\n",
@@ -501,7 +501,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs_duration.append(time())\n",
     "epochs_duration.append(time())\n",
     "while epochs_duration[0] + max_duration - 5 >= time() + (epochs_duration[-1] - epochs_duration[-2]) * 2:\n",
     "    mutations = do_mutations(population, libraries, days_number, books_scores)\n",
@@ -527,9 +526,28 @@
    "outputs": [],
    "source": [
     "print(population[0][0])\n",
+    "\n",
     "for i in range(1, len(population[0])):\n",
     "    print(population[0][i][0], population[0][i][1], end = \" \")\n",
-    "    print(\" \".join([str(x) for x in population[0][i][2]]))"
+    "    print(\" \".join([str(x) for x in population[0][i][2]]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sum of all instances\n",
+    "After applying everything that was explained above, we run the program for six different data sets which were given. The final answer is the sum of the best scores for the individual data sets. The results are showed below.\n",
+    "\\begin{itemize}\n",
+    "\\item \\texttt{a_example.txt solution is:  21}\n",
+    "\\item \\texttt{b_read_on.txt solution is:  5831900}\n",
+    "\\item \\texttt{c_incunabula.txt solution is:  5414171}\n",
+    "\\item \\texttt{d_tough_choices.txt solution is:  4815200}\n",
+    "\\item \\texttt{e_so_many_books.txt solution is:  4610173}\n",
+    "\\item \\texttt{f_libraries_of_the_world.txt solution is:  4116926}\n",
+    "\\end{itemize}\n",
+    "\n",
+    "So it gives us the total solution of 24788391 points."
    ]
   }
  ],
